--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/AndyCotruta/U1-W1-D5-SoloProject-MarketPlace-Backend#readme",
   "dependencies": {
+    "axios": "^1.2.2",
     "cloudinary": "^1.33.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
@@ -30,6 +31,7 @@
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
     "pdfmake": "^0.2.7",
+    "striptags": "^3.2.0",
     "uniqid": "^5.4.0"
   },
   "devDependencies": {
