send email thing throws error

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/AndyCotruta/U1-W1-D5-SoloProject-MarketPlace-Backend#readme",
   "dependencies": {
+    "@sendgrid/mail": "^7.7.0",
     "axios": "^1.2.2",
     "cloudinary": "^1.33.0",
     "cors": "^2.8.5",
