--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express-list-endpoints": "^6.0.0",
     "express-validator": "^6.14.2",
     "fs-extra": "^11.1.0",
+    "fs-tools": "^0.5.0",
     "http-errors": "^2.0.0",
     "image-to-base64": "^2.2.0",
     "json2csv": "^5.0.7",
