--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "http-errors": "^2.0.0",
     "image-to-base64": "^2.2.0",
     "json2csv": "^5.0.7",
+    "mongoose": "^6.8.3",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
     "pdfmake": "^0.2.7",
